# CoRAL

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  requirements.txt  setup.py  tasks.py  test.ipynb
LongReadAmpliconArchitect/: README.md  pyproject.toml
LongReadAmpliconArchitect/long_read_aa/breakpoints/: BreakpointEdge.py  BreakpointGraph.py  SequenceEdge.py  breakpoint_graph.py  breakpoint_utilities.py  cigar_parsing.py  cnv_seed.py  cycle2bed.py  cycle_decomposition.py  global_names.py  hsr.py  infer_breakpoint_graph.py  plot_amplicons.py  refine_breakpoint_graph.py  test_max_flow.py
LongReadAmpliconArchitect/tests/breakpoints_tests/: test_breakpointgraph.py  test_cigar_parsing.py
LongReadAmpliconArchitect/tests/cycles_tests/: test_cycles.py
blastn_analysis/: BLASTN_ANALYSIS.md  analyze_blast.py  extract_substring.py  fq2fa.py
breakpoint_graph/: chimeric_reads.py  refine_breakpoint_graph.py  refine_breakpoint_graph_cvxopt.py
coral/: CoRAL.py  __version__.py  amplicon_classifier.py  bam_types.py  breakpoint_graph.py  breakpoint_utilities.py  cigar_parsing.py  cli.py  cnv_seed.py  config.py  constants.py  core_types.py  core_utils.py  cycle2bed.py  cycle_decomposition.py  datatypes.py  global_state.py  hsr.py  infer_breakpoint_graph.py  path_constraints.py  plot_amplicons.py  plot_cn.py  pycbs.py  pyomo_wrappers.py  segmentation.py  state_provider.py  text_utils.py  types.py  visualization_cell.py  viz_amplicon_properties.py
coral/breakpoint/: __init__.py  bam_types.py  breakpoint_graph.py  breakpoint_types.py  breakpoint_utilities.py  breakpoint_utils.py  graph.py  infer_breakpoint_graph.py  parse_graph.py  path_utilities.py
coral/classify/: __init__.py  classify_types.py  classify_utils.py
coral/models/: __init__.py  concrete.py  constraints.py  cycle_utils.py  output.py  path_constraints.py  utils.py
coral/output/: __init__.py  aa_utils.py  amplicon_summary.py  cycle_output.py  output.py  path_output.py  summary.py  traversal.py  utils.py
coral/parsing/: __init__.py  cns_types.py  cns_utils.py  sam_types.py  sam_utils.py
coral/scoring/: __init__.py  io_utils.py  score_simulation.py  scoring_types.py  scoring_utils.py
coral/summary/: __init__.py  output.py  parsing.py  resource_usage.py
coral/supplemental_data/: exclude.cnvnator_100bp.GRCh38.20170403.bed
notebooks/: plot_coverage.ipynb
reference/: reference_for_cnv_calling_filtered.cnn
sample_data/plots/: amplicon1_converted_cycles.bed  amplicon2_converted_cycles.bed
sample_data/test4/: amplicon1_cycles.txt  amplicon1_graph.txt  amplicon2_cycles.txt  amplicon2_graph.txt  amplicon_summary.txt  chimeric_alignments.pickle
scripts/: align_illumina_reads.sh  align_nanopore_reads.sh  call_cnvs.sh  gtf_to_refgene.py  report_nanopore_qc.py
src/: CoRAL.py  __version__.py  breakpoint_graph.py  breakpoint_utilities.py  cigar_parsing.py  cnv_seed.py  cycle2bed.py  cycle_decomposition.py  global_names.py  hsr.py  infer_breakpoint_graph.py  path_constraints.py  plot_amplicons.py
tests/: test_discordant_edge_output_order.py  test_merge_connected_amplicons.py  test_plot_amplicons.py  test_pycbs.py
