[tool.poetry]
authors = ["Kaiyuan Zhu <kaiyuan-zhu@ucsd.edu>", "Matt Jones <mgjones@stanford.edu>", "Jens Luebeck <jluebeck@ucsd.edu>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",  # Specify Python 3 only
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Amplicon reconstruction from long-read data"
homepage = "https://github.com/AmpliconSuite/CoRAL"
license = "MIT"
name = "CoRAL"
readme = 'README.md'
repository = "https://github.com/AmpliconSuite/CoRAL"
version = "1.0.0"

packages = [
  {include = "coral"},
]

[tool.poetry.dependencies]
cvxopt = "*"
cnvkit = "*"
gurobipy = "*"
intervaltree = "*"
matplotlib = "*"
pandas = {version = "*", python=">=3.7,<4.0"}
pysam = {version = ">0.1.7"}
pytest = {version = ">=4.4", optional = true}
python = ">=3.10,<4.0"
numpy = "==2.0.2"
numba = "==0.60.0"
llvmlite = "==0.43.0"
pomegranate = "==1.1.0"
scanpydoc = {version = ">=0.5", optional = true}
typing-extensions = ">=3.7.4"
typing_extensions = {version = "*", python = "<3.9", optional = true}
click = "^8.1.7"
mypy = "^1.11.2"
pydantic = "^2.9.2"
pyomo = "^6.8.0"
ruff = "^0.6.9"
highspy = "^1.7.2"
pyranges = "^0.1.2"
seaborn = "^0.13.2"
typer = "^0.12.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.7", "Cython", "pip>=22.0.0", "pyproject-hooks==1.0.0"]

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "jupyter", "pre-commit", "isort"]
docs = [
  "sphinx",
  "scanpydoc",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "pydata-sphinx-theme",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx_gallery",
]

[tool.poetry.scripts]
coral = "coral.cli:cli_mode"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "E501",
  "D",  # Docstrings
  "COM812", # Trailing comma
  "PLR2004", # "magic" value in comparison rather than constant
]
line-length = 120

[tool.mypy]
enable_error_code = "possibly-undefined"
disable_error_code = "import-untyped"
# strict = true