[tool.poetry]
authors = ["author <author@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Amplicon reconstruction from long-read data"
homepage = "https://github.com/Changlab/long-read-ecdna"
license = "MIT"
name = "long-read-amplicon"
readme = 'README.md'
repository = "https://github.com/Changlab/long-read-ecdna"
version = "1.0.0"

packages = [
  {include = "long_read_aa"},
]

[tool.poetry.dependencies]
cvxpy = "*"
pytest = {version = ">=4.4", optional = true}
python = ">=3.7,<4.0"
scanpydoc = {version = ">=0.5", optional = true}
typing-extensions = ">=3.7.4"
typing_extensions = {version = "*", python = "<3.9", optional = true}
pandas = {version = "*", python=">=3.7,<4.0"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.7", "Cython", "numpy>=1.19.5,<1.22", "setuptools", "pip>=22.0.0"]

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "jupyter", "pre-commit", "isort"]
docs = [
  "sphinx",
  "scanpydoc",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "pydata-sphinx-theme",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx_gallery",
]